#1818 #1800 convert cc to original expression when push down